# OPEN-ENV

./: .gitignore  BUILD_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DEPLOY_URLS.md  Dockerfile  README.md  __init__.py  inference.py  openenv.yaml  pyproject.toml  validate-submission.sh
graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
server/: __init__.py  app.py  env.py  models.py
tasks/: __init__.py  easy.py  hard.py  medium.py
